______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 7:

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 6:

* XINS/Java Server Framework:
  - Added tests for _GetSettings, _DisableFunction, _EnableFunction and
   _GetFunctionList meta functions.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.

* XINS/Java Common Library:
  - Added the hashCode() and equals() method to the types Date and Timestamp.
  - Fixed the HTTPServiceCaller did not pass the arguments correctly when using
    the GET method.
  - Added TextUtils class.
  - Added tests for the ExpiryFolder and MandatoryArgumentChecker.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.

* XINS/Java Client Framework:
  - Added more test using the AllInOne CAPI.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.
  - Improved the logging.
  - Refactored XINSCallResultParser, improved the documentation for it and
    improved and extended the tests for it. Fixed bug that caused the PCDATA
    content in the data section to be not parsed correctly.

* Tests
  - Added JCoverage to the libraries and added a coverage task that shows the 
    code covered by the tests.
  - Integrated the allinone example to the src/tests directory.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 5:

* XINS/Java Server Framework:
  - When an object is added to the data section, a clone of this object is
    added to the element.
  - The class Element now implements the Cloneable interface.
  - Added a test for the AllInOne example.
  - Added a test for the _NoOp meta function.

* XINS/Java Client Framework:
  - The class DataElement now implements the Cloneable interface.
  - If the result has no parameters, getParameters() returns null.