@@ -61,78 +61,52 @@
 		</entry>
 	</group>
 
-	<group id="collections" name="Generic collection classes" />
-
-	<group id="collections.expiry" name="Expiry-related collection classes">
-		<entry id="3400" level="DEBUG">
-			<description>Tick processed.</description>
-			<param name="folderName" type="text"  nullable="false" />
-			<param name="expired"    type="int32" nullable="false" />
-			<param name="remaining"  type="int32" nullable="false" />
-		</entry>
-		<entry id="3404" level="DEBUG">
-			<description>Associating expiry folder with expiry stategy thread.</description>
-			<param name="folder"   type="text" nullable="false" />
-			<param name="strategy" type="text" nullable="false" />
-		</entry>
-		<entry id="3405" level="DEBUG">
-			<description>Expiry strategy thread started.</description>
-			<param name="name" type="text" nullable="false" />
-		</entry>
-		<entry id="3406" level="DEBUG">
-			<description>Expiry strategy thread stopped.</description>
-			<param name="name" type="text" nullable="false" />
-		</entry>
-	</group>
-
 	<group id="http" name="HTTP-related">
-		<entry id="2011" level="INFO">
+		<entry id="3100" level="INFO">
 			<description>Calling HTTP service.</description>
 			<param name="url"	       type="text"  nullable="false" />
 			<param name="totalTimeOut"      type="int32" nullable="false" />
 			<param name="connectionTimeOut" type="int32" nullable="false" />
 			<param name="socketTimeOut"     type="int32" nullable="false" />
 		</entry>
-		<entry id="2012" level="NOTICE">
+		<entry id="3101" level="NOTICE">
 			<description>Connection refused while calling HTTP service.</description>
 			<param name="url" type="text" nullable="false" />
 		</entry>
-		<entry id="2013" level="NOTICE">
+		<entry id="3102" level="NOTICE">
 			<description>Connection time-out while calling HTTP service.</description>
 			<param name="url"     type="text"  nullable="false" />
 			<param name="timeOut" type="int32" nullable="false" />
 		</entry>
-		<entry id="2014" level="NOTICE">
+		<entry id="3103" level="NOTICE">
 			<description>Socket time-out while calling HTTP service.</description>
 			<param name="url"     type="text"  nullable="false" />
 			<param name="timeOut" type="int32" nullable="false" />
 		</entry>
-		<entry id="2015" level="NOTICE">
+		<entry id="3104" level="NOTICE">
 			<description>Total call time-out while calling HTTP service.</description>
 			<param name="url"     type="text"  nullable="false" />
 			<param name="timeOut" type="int32" nullable="false" />
 		</entry>
-		<entry id="2016" level="INFO">
+		<entry id="3105" level="INFO">
 			<description>HTTP result received, status code is considered acceptable.</description>
-			<!-- TODO: Check translation for this one -->
 			<param name="url"  type="text"  nullable="false" />
 			<param name="code" type="int32" nullable="false" />
 		</entry>
-		<entry id="2099" level="INFO">
+		<entry id="3106" level="INFO">
 			<description>HTTP result received, status code is considered unacceptable.</description>
-			<!-- TODO: Add translation for this one -->
 			<param name="url"  type="text"  nullable="false" />
 			<param name="code" type="int32" nullable="false" />
 		</entry>
-		<entry id="2017" level="NOTICE" exception="true">
+		<entry id="3107" level="NOTICE" exception="true">
 			<description>Unrecognized I/O error while calling HTTP service.</description>
 			<param name="url" type="text"  nullable="false" />
 		</entry>
-		<entry id="2018" level="NOTICE" exception="true">
+		<entry id="3108" level="NOTICE" exception="true">
 			<description>Unexpected exception while calling HTTP service.</description>
 			<param name="url" type="text"  nullable="false" />
 		</entry>
-		<entry id="2019" level="NOTICE" exception="false">
+		<entry id="3109" level="NOTICE" exception="false">
 			<description>Unknown host error while calling HTTP service.</description>
 			<param name="url" type="text"  nullable="false" />
 		</entry>
@@ -156,42 +130,66 @@
 		</entry>
 	</group>
 
+	<group id="text" name="Text">
+		<entry id="3250" level="DEBUG">
+			<description>Increasing capacity of FastStringBuffer instance.</description>
+			<param name="currentCapacity" type="int32" nullable="false" />
+			<param name="newCapacity"     type="int32" nullable="false" />
+		</entry>
+	</group>
+
 	<group id="service" name="Service calling framework">
-		<entry id="3303" level="ERROR" exception="true">
+		<entry id="3300" level="ERROR" exception="true">
 			<description>URL is malformed.</description>
 			<param name="url" type="text" nullable="false" />
 		</entry>
-		<entry id="3312" level="DEBUG">
+		<entry id="3301" level="DEBUG">
 			<description>Call to a specific target succeeded.</description>
 			<param name="url" type="text" nullable="false" />
 		</entry>
-		<entry id="3313" level="WARNING">
+		<entry id="3302" level="WARNING">
 			<description>Call to a specific target failed.</description>
 			<param name="url" type="text" nullable="false" />
 		</entry>
-		<entry id="3314" level="ERROR">
+		<entry id="3303" level="ERROR">
 			<description>Call completely failed.</description>
 			<!-- TODO: Include call (request) ID ? -->
 		</entry>
-		<entry id="3315" level="INFO">
+		<entry id="3304" level="INFO">
 			<description>No more targets and no fail-over</description>
 		</entry>
-		<entry id="3316" level="INFO">
+		<entry id="3305" level="INFO">
 			<description>No more targets, but fail-over would be allowed</description>
 		</entry>
-		<entry id="3317" level="INFO">
+		<entry id="3306" level="INFO">
 			<description>More targets available, but fail-over is not allowed</description>
 		</entry>
-		<entry id="3318" level="INFO">
+		<entry id="3307" level="INFO">
 			<description>More targets available and fail-over is allowed</description>
 		</entry>
 	</group>
 
-	<group id="text" name="Text">
-		<entry id="3205" level="DEBUG">
-			<description>Increasing capacity of FastStringBuffer instance.</description>
-			<param name="currentCapacity" type="int32" nullable="false" />
-			<param name="newCapacity"     type="int32" nullable="false" />
+	<group id="collections" name="Generic collection classes" />
+
+	<group id="collections.expiry" name="Expiry-related collection classes">
+		<entry id="3400" level="DEBUG">
+			<description>Tick processed.</description>
+			<param name="folderName" type="text"  nullable="false" />
+			<param name="expired"    type="int32" nullable="false" />
+			<param name="remaining"  type="int32" nullable="false" />
+		</entry>
+		<entry id="3401" level="DEBUG">
+			<description>Associating expiry folder with expiry stategy thread.</description>
+			<param name="folder"   type="text" nullable="false" />
+			<param name="strategy" type="text" nullable="false" />
+		</entry>
+		<entry id="3402" level="DEBUG">
+			<description>Expiry strategy thread started.</description>
+			<param name="name" type="text" nullable="false" />
+		</entry>
+		<entry id="3403" level="DEBUG">
+			<description>Expiry strategy thread stopped.</description>
+			<param name="name" type="text" nullable="false" />
 		</entry>
 	</group>
 
