@@ -9,27 +9,45 @@
 
 <translation-bundle>
 	<translation entry="3000">TRACE: Enter <value-of-param name="className" /> constructor. Detail: <value-of-param name="detail" format="quoted" />.</translation>
+	<translation entry="3001">TRACE: Leave <value-of-param name="className" /> constructor with an exception. Detail: <value-of-param name="detail" format="quoted" />.</translation>
 	<translation entry="3002">TRACE: Leave <value-of-param name="className" /> constructor. Detail: <value-of-param name="detail" format="quoted" />.</translation>
+	<translation entry="3003">TRACE: Enter <value-of-param name="methodName" /> method of the <value-of-param name="className" /> class. Detail: <value-of-param name="detail" format="quoted" />.</translation>
+	<translation entry="3004">TRACE: Leave <value-of-param name="methodName" /> method of the <value-of-param name="className" /> class with an exception. Detail: <value-of-param name="detail" format="quoted" />.</translation>
+	<translation entry="3005">TRACE: Leave <value-of-param name="methodName" /> method of the <value-of-param name="className" /> class. Detail: <value-of-param name="detail" format="quoted" />.</translation>
 
-	<translation entry="3400">Expiry folder <value-of-param name="folderName" format="quoted" />: Tick processed. Entries expired: <value-of-param name="expired" />. Entries remaining: <value-of-param name="remaining" />.</translation>
-	<translation entry="3404"><value-of-param name="folder" /> associated with <value-of-param name="strategy" />.</translation>
-	<translation entry="3405">Expiry strategy thread <value-of-param name="name" format="quoted" /> started.</translation>
-	<translation entry="3406">Expiry strategy thread <value-of-param name="name" format="quoted" /> stopped.</translation>
+	<translation entry="3050">TRACE: Programming error in the <value-of-param name="methodName" /> method of the <value-of-param name="className" /> class. Detail: <value-of-param name="detail" format="quoted" />.</translation>
+	<translation entry="3051">TRACE: Ignoring the <value-of-param name="exceptionClass" /> exception with the message <value-of-param name="exceptionMessage" format="quoted" /> class. Detail: <value-of-param name="description" format="quoted" />.</translation>
+	
+	<translation entry="3100">Calling <value-of-param name="url" />, total time-out is <value-of-param name="totalTimeOut" /> ms, connection time-out is <value-of-param name="connectionTimeOut" /> ms, socket time-out is <value-of-param name="socketTimeOut" /> ms.</translation>
+	<translation entry="3101">Connection refused while calling <value-of-param name="url" />.</translation>
+	<translation entry="3102">Connection time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
+	<translation entry="3103">Socket time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
+	<translation entry="3104">Total call time-out after <value-of-param name="timeOut" /> ms while calling <value-of-param name="url" />.</translation>
+	<translation entry="3105">Received acceptable HTTP result with code <value-of-param name="code" /> while calling URL <value-of-param name="url" />.</translation>
+	<translation entry="3106">Received unacceptable HTTP result with code <value-of-param name="code" /> while calling URL <value-of-param name="url" />.</translation>
+	<translation entry="3107">I/O error while calling <value-of-param name="url" />.</translation>
+	<translation entry="3108">Unexpected exception while calling <value-of-param name="url" />.</translation>
+	<translation entry="3109">Unknown host error while calling <value-of-param name="url" />.</translation>
 
 	<translation entry="3200">Starting watch thread for file <value-of-param name="file" format="quoted" />. Checking for modifications every <value-of-param name="interval" /> seconds.</translation>
 	<translation entry="3201">Changing the watch interval for file <value-of-param name="file" format="quoted" /> from <value-of-param name="oldInterval" /> to <value-of-param name="newInterval" /> seconds.</translation>
 	<translation entry="3202">Stopping watch thread for file <value-of-param name="file" format="quoted" />.</translation>
 
-	<translation entry="3205">Increasing FastStringBuffer capacity from <value-of-param name="currentCapacity" /> to <value-of-param name="newCapacity" />.</translation>
+	<translation entry="3250">Increasing FastStringBuffer capacity from <value-of-param name="currentCapacity" /> to <value-of-param name="newCapacity" />.</translation>
 
-	<translation entry="3303">URL <value-of-param name="url" format="quoted" /> is malformed.</translation>
-	<translation entry="3312">Call to service at URL <value-of-param name="url" /> succeeded.</translation>
-	<translation entry="3313">Call to service at URL <value-of-param name="url" /> failed.</translation>
-	<translation entry="3314">Call completely failed.</translation>
-	<translation entry="3315">No more targets and no fail-over.</translation>
-	<translation entry="3316">No more targets but fail-over would be allowed.</translation>
-	<translation entry="3317">More targets available but fail-over is not allowed.</translation>
-	<translation entry="3318">More targets available and fail-over is allowed.</translation>
+	<translation entry="3300">URL <value-of-param name="url" format="quoted" /> is malformed.</translation>
+	<translation entry="3301">Call to service at URL <value-of-param name="url" /> succeeded.</translation>
+	<translation entry="3302">Call to service at URL <value-of-param name="url" /> failed.</translation>
+	<translation entry="3303">Call completely failed.</translation>
+	<translation entry="3304">No more targets and no fail-over.</translation>
+	<translation entry="3305">No more targets but fail-over would be allowed.</translation>
+	<translation entry="3306">More targets available but fail-over is not allowed.</translation>
+	<translation entry="3307">More targets available and fail-over is allowed.</translation>
+
+	<translation entry="3400">Expiry folder <value-of-param name="folderName" format="quoted" />: Tick processed. Entries expired: <value-of-param name="expired" />. Entries remaining: <value-of-param name="remaining" />.</translation>
+	<translation entry="3401"><value-of-param name="folder" /> associated with <value-of-param name="strategy" />.</translation>
+	<translation entry="3402">Expiry strategy thread <value-of-param name="name" format="quoted" /> started.</translation>
+	<translation entry="3403">Expiry strategy thread <value-of-param name="name" format="quoted" /> stopped.</translation>
 
 	<translation entry="3420"><value-of-param name="className" />: Unable to add a thread name <value-of-param name="thread" format="quoted" /> to queue. Time-out after <value-of-param name="maxQueueWaitTime" /> ms.</translation>
 
